--- a/explore.html
+++ b/explore.html
@@ -6,7 +6,7 @@
         <nav>
             <div class="navigation container">
                 <div class="logo_container">
-                    <img src="./images/logo.png" alt="logo" />
+                    <img src="logo.png" alt="logo" />
                 </div>
                 <div class="bar_icon">
                     <i class="fas fa-bars"></i>
@@ -15,15 +15,16 @@
         </nav>
         <div class="grid">
             <div class="item1">
-                <img class="grid-image" src="./images/grid_image1.png" alt="image 1" />
+                <img class="grid-image" src="grid_image1.png" alt="image 1" />
             </div>
             <br>
             <section>
             <div class="item7">
-                <img class="grid-image" src="./images/grid_image7.png" alt="image 7" />
+                <img class="grid-image" src="grid_image7.png" alt="image 7" />
             </div>
         </section>
         </div>  
         <a href="./menu.html"<h2>Explore Our Menu</h2></a>
     </body>
+
 </html>
