--- a/check out.html
+++ b/check out.html
@@ -7,7 +7,7 @@
   <nav>
     <div class="navigation container">
         <div class="logo_container">
-            <img src="images/logo.png" alt="logo" />
+            <img src="logo.png" alt="logo" />
         </div>
         <div class="bar_icon">
             <i class="fas fa-bars"></i>
@@ -291,4 +291,5 @@
     <span id="PING_IFRAME_FORM_DETECTION" style="display: none;"></span>
 </section>
 </body>
+
 </html>
