--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
   <nav>
     <div class="navigation container">
         <div class="logo_container">
-            <img src="images/logo.png" alt="logo" />
+            <img src="logo.png" alt="logo" />
         </div>
         <div class="bar_icon">
             <i class="fas fa-bars"></i>
@@ -49,4 +49,5 @@
 </div>
 </div>
 </body>
+
 </html>
