--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
         <div class="navigation container">
             <div class="logo_container">
-                <img src="images/logo.png" alt="logo" />
+                <img src="logo.png" alt="logo" />
             </div>
             <div class="bar_icon">
                 <i class="fas fa-bars"></i>
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="hero">
             <div class="hero_image">
-                <img src="images/hero_image.png" alt="hero image" />
+                <img src="hero_image.png" alt="hero image" />
             </div>
             <div class="hero_content">
                 <div class="tag">50% Off on All Products</div>
@@ -132,5 +132,6 @@
         </div>
     </footer>
 </body>
+
 
 </html>
