--- a/index.html
+++ b/index.html
@@ -64,25 +64,25 @@
             <a href="./menu.html"<div class="tag">Our Menu</div></a>
             <div class="grid">
                 <div class="item1">
-                    <img class="grid-image" src="images/grid_image1.png" alt="image 1" />
+                    <img class="grid-image" src="grid_image1.png" alt="image 1" />
                 </div>
                 <div class="item2">
-                    <img class="grid-image" src="images/grid_image2.png" alt="image 2" />
+                    <img class="grid-image" src="grid_image2.png" alt="image 2" />
                 </div>
                 <div class="item3">
-                    <img class="grid-image" src="images/grid_image3.png" alt="image 3" />
+                    <img class="grid-image" src="grid_image3.png" alt="image 3" />
                 </div>
                 <div class="item4">
-                    <img class="grid-image" src="images/grid_image4.png" alt="image 4" />
+                    <img class="grid-image" src="grid_image4.png" alt="image 4" />
                 </div>
                 <div class="item5">
-                    <img class="grid-image" src="images/grid_image5.png" alt="image 5" />
+                    <img class="grid-image" src="grid_image5.png" alt="image 5" />
                 </div>
                 <div class="item6">
-                    <img class="grid-image" src="images/grid_image6.png" alt="image 6" />
+                    <img class="grid-image" src="grid_image6.png" alt="image 6" />
                 </div>
                 <div class="item7">
-                    <img class="grid-image" src="images/grid_image7.png" alt="image 7" />
+                    <img class="grid-image" src="grid_image7.png" alt="image 7" />
                 </div>
             </div>
         </div>
@@ -135,3 +135,4 @@
 
 
 </html>
+
