--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <footer>
         <div class="footer_container container">
             <div class="footer_logo">
-                <img src="images/logo.png" alt="logo" />
+                <img src="logo.png" alt="logo" />
             </div>
             <div class="link_lists">
                 <h3>Main Links</h3>
@@ -135,4 +135,5 @@
 
 
 </html>
+
 
